@@ -1,3 +1,4 @@
+> Fixed: "reset all" does not remove walls that were added, see #540
 # 1.09.02 (53443) Jun 23, 2011
 # 1.09.01 (53286) Jun 20, 2011
 Improved faucet image and metrics
